Rename client to standalone client

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <script src="tronlikesx-fastopt.js" type="text/javascript"></script>
 </head>
-<body style="margin: 0; padding: 0;" onload="new Client().main()">
+<body style="margin: 0; padding: 0;" onload="new StandaloneClient().main()">
 <img id="sprite" src="font.png" style="display: none">
 <canvas id="canvas"></canvas>
 </body>
